2013-03-13  Richard Frith-Macdonald <rfm@gnu.org>

        * GNUmakefile: 1.0.2 release

2013-03-13  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.h:
	* EcProcess.m:
        Improve documentation of sequence of calls of configuration update
        methods and add convenience functionality to support alarming for
        fatal configuration errors.
        Add EcMemoryIncrement config to adjust alerting about potential leaks.

2013-01-26  Richard Frith-Macdonald <rfm@gnu.org>

	* EcAlarmDestination.m:
	* EcAlarmSinkSNMP.m: Fix problem flushing alarms on process shutdown.

2012-12-17  Niels Grewe <niels.grewe@halbordnung.de>

	* EcAlarmDestination.m: Fix designated initializer behaviour.
	* EcControl.m: Make SNMP master agent port and host configurable.

2012-12-07  Richard Frith-Macdonald <rfm@gnu.org>

        * EcAlarmSinkSNMP.m:
        * GNUSTEP-MIB.txt:
        Fix minor naming consistency errors.

2012-12-06  Richard Frith-Macdonald <rfm@gnu.org>

        * EcProcess.m: Improve handling of signals ... quit process after the
        next event when an unexpected signal is caught.

2012-10-28  Richard Frith-Macdonald <rfm@gnu.org>

	* EcCommand.m:
2012-11-26  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* EcLogger.m (+loggerForType): Fix wrong receiver when registering
	for notifications.

2012-11-16  Richard Frith-Macdonald <rfm@gnu.org>

        * EcControl.m: Record a change in the alerter configuration as an
        update of the overall configuration.
        * EcProcess.m: Implement 'alarms' and 'clear' commands for local
        process alarm state.

2012-10-28  Richard Frith-Macdonald <rfm@gnu.org>

	* EcCommand.m:
	* EcConsole.m:
	* EcControl.m:
	* EcLogger.m:
	* EcProcess.h:
	* EcProcess.m:
	Use NSInteger argument for -cmdQuit:
	
2012-10-18  Richard Frith-Macdonald <rfm@gnu.org>

        * EcProcess.m: Remove unused variable.
        * EcControl.m: Yse -hostWithWellKnownName: in preference to
        -hostWithName: when trying to find/match hosts.
